--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -33,89 +33,25 @@
   <body>
     <!-- navigation -->
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="brand ir" href="#/">
-            camunda Cockpit
-          </a>
+      <div class="navbar-header">
+        <button type="button"
+                class="navbar-toggle collapsed"
+                data-toggle="collapse"
+                data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-
-          <!--div ng-include="'$APP_ROOT/app/cockpit/templates/navigation.html'"></div-->
-          <!-- # CE - camunda-cockpit-ui client/scripts/templates/navigation.html -->
-          <div class="nav-collapse collapse"
-               ng-cloak>
-            <ul class="nav pull-right"
-                ng-controller="AuthenticationController">
-
-              <li engine-select></li>
-
-              <li class="dropdown"
-                cam-if-logged-in
-                ng-cloak>
-                <a href
-                   sem-show-user-actions
-                   class="dropdown-toggle"
-                   data-toggle="dropdown">
-                  <i class="icon-user icon-white"></i>
-                  {{ authentication.name }}
-                </a>
-
-                <ul class="dropdown-menu">
-                  <li>
-                    <a sem-jump-to-profile
-                       ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
-                      My Profile
-                    </a>
-                  </li>
-
-                  <li class="divider"></li>
-
-                  <li>
-                    <a href
-                       sem-log-out
-                       ng-click="logout()">
-                      Sign out
-                    </a>
-                  </li>
-                </ul>
-              </li>
-
-              <li class="divider-vertical"
-                  cam-if-logged-in
-                  ng-cloak></li>
-
-              <li class="app-switch dropdown">
-                <a href
-                   sem-show-applications
-                   class="dropdown-toggle"
-                   data-toggle="dropdown">
-                  <i class="icon-home icon-white"></i>
-                  <b class="caret"></b>
-                </a>
-
-                <ul class="dropdown-menu">
-                  <li ng-if="!authentication || authentication.canAccess('admin')">
-                    <a sem-jump-to-admin
-                       ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
-                  </li>
-
-                  <li ng-if="!authentication || authentication.canAccess('tasklist')">
-                    <a sem-jump-to-tasklist
-                       ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <!-- / CE - camunda-cockpit-ui client/scripts/templates/navigation.html -->
-
-        </div>
+        <a class="navbar-brand" href="#/">
+          camunda Cockpit
+        </a>
       </div>
+
+      <div ng-include="'$APP_ROOT/app/cockpit/templates/navigation.html'"
+           class="navbar-collapse"
+           id="navbar-collapse"></div>
     </div>
 
     <!-- content -->
