--- a/client/client/scripts/pages/systemSettingsGeneral.html
+++ b/client/client/scripts/pages/systemSettingsGeneral.html
@@ -2,11 +2,11 @@
   <legend>General Settings</legend>
 
   <div class="alert alert-success">
-    <span><i class="icon-thumbs-up"></i> 
+    <span><i class="glyphicon glyphicon-thumbs-up"></i>
     <strong>
-      Process engine 
+      Process engine
     </strong>
-      <code>{{processEngineName}}</code> 
+      <code>{{processEngineName}}</code>
       is up and running.
 
   </div>
