--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="span3">
+      <div class="col-md-3">
         <div class="well sidebar-nav">
           <ul class="nav nav-list">
             <li class="nav-header">Resources</li>
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <div class="span9">
+      <div class="col-md-9">
 
         <div>
           <div class="box auth-box">
@@ -44,11 +44,11 @@
                     </td>
                     <td>
                       <span ng-show="authorization.userId">
-                        <i class="icon-user"></i>
+                        <i class="glyphicon glyphicon-user"></i>
                         {{authorization.userId}}
                       </span>
                       <span ng-show="authorization.groupId">
-                        <i class="icon-th"></i>
+                        <i class="glyphicon glyphicon-th"></i>
                         {{authorization.groupId}}
                       </span>
 
@@ -60,7 +60,7 @@
                       {{authorization.resourceId}}
                     </td>
                     <td>
-                      <a class="btn btn-link btn-small" ng-click="deleteAuthorization(authorization)">
+                      <a class="btn btn-link btn-sm" ng-click="deleteAuthorization(authorization)">
                         delete</a>
                     </td>
                   </tr>
@@ -76,9 +76,9 @@
                     </td>
 
                     <td  class="inline-edit">
-                      <div class="input-prepend">
+                      <div class="input-group">
                         <div class="btn-group dropdown">
-                          <a class="btn dropdown-toggle select-identity-type"
+                          <a class="btn btn-default dropdown-toggle select-identity-type"
                             ng-disabled="isIdentityIdDisabled()"
                             data-toggle="dropdown">
                             {{identityType}}
@@ -103,15 +103,15 @@
                     </td>
 
                     <td class="inline-edit">
-                      <div class="input-append">
-                      <span id="selectPermission" class="input-xlarge uneditable-input span2 permissions-editor">
-                        <a ng-click="addAllPermissions()" ng-show="selectedPermissions != 'ALL'"><i class="icon-remove"></i></a>
+                      <div class="input-group">
+                      <span id="selectPermission" class="input-xlarge uneditable-input col-md-2 permissions-editor">
+                        <a ng-click="addAllPermissions()" ng-show="selectedPermissions != 'ALL'"><i class="glyphicon glyphicon-remove"></i></a>
                         {{formatPermissions(selectedPermissions)}}
                       </span>
                       <div class="btn-group dropdown">
-                        <a class="btn dropdown-toggle"
+                        <a class="btn btn-default dropdown-toggle"
                            data-toggle="dropdown">
-                          <i class="icon-pencil"></i>
+                          <i class="glyphicon glyphicon-pencil"></i>
                         </a>
                         <ul class="dropdown-menu">
                           <li ng-repeat="perm in availablePermissions"><a ng-click="addPermission(perm)">{{perm}}</a></li>
@@ -122,18 +122,18 @@
                     <td class="inline-edit">
                       <input type="text" id="inputResourceId" ng-model="newAuthorization.resourceId" class="in-place-edit"
                       required></input>
-                      <span ng-show="selectedResourceType==0" class="muted">(cockpit or tasklist or *)</span>
+                      <span ng-show="selectedResourceType==0" class="text-muted">(cockpit or tasklist or *)</span>
                     </td>
 
                     <td>
                       <div class="btn-group">
                         <button type="submit" class="btn btn-primary" ng-disabled="createAuthForm.$invalid" ng-click="createAuthorization()">
-                            <i class="icon-ok icon-white"></i>
+                            <i class="glyphicon glyphicon-ok "></i>
                         </button>
 
                         <a type="submit" class="btn"
                           ng-click="toggleCreateNewForm()">
-                            <i class="icon-ban-circle"></i>
+                            <i class="glyphicon glyphicon-ban-circle"></i>
                         </a>
                       </div>
 
@@ -144,7 +144,7 @@
                     <td colspan="5">
                       <a class="btn btn-link"
                         ng-click="toggleCreateNewForm()">
-                        <i class="icon-plus"></i> Create New
+                        <i class="glyphicon glyphicon-plus"></i> Create New
                       </a>
                     </td>
                   </tr>
