--- a/client/client/scripts/pages/groupCreate.html
+++ b/client/client/scripts/pages/groupCreate.html
@@ -7,8 +7,8 @@
     </div>
     <div class="row">
       <form class="form-horizontal" name="createGroupForm">
-        
-        <div class="control-group">
+
+        <div class="form-group">
           <label class="control-label" for="inputGroupId">Group Id*</label>
           <div class="controls">
             <input id="inputGroupId" name="groupId" type="text" ng-model="group.id" novalidate required></input>
@@ -16,7 +16,7 @@
           </div>
         </div>
 
-        <div class="control-group">
+        <div class="form-group">
           <label class="control-label" for="inputName">Group Name*</label>
           <div class="controls">
             <input id="inputName" name="groupName" type="text" ng-model="group.name" novalidate required></input>
@@ -24,20 +24,20 @@
           </div>
         </div>
 
-        <div class="control-group">
+        <div class="form-group">
           <label class="control-label" for="inputType">Group Type</label>
           <div class="controls">
             <input id="inputType" name="groupType" type="text" ng-model="group.type"></input>
           </div>
         </div>
 
-        <div class="control-group">
+        <div class="form-group">
           <div class="controls">
             <a class="btn" href="#/groups">Cancel</a>
             <button type="submit" class="btn btn-primary"  data-ng-disabled="!createGroupForm.$valid" data-ng-click="createGroup()">Create new Group</button>
           </div>
         </div>
-     
+
       </form>
     </div>
   </section>
