--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -1,37 +1,37 @@
-<div class="container" ng-cloak>    
+<div class="container" ng-cloak>
   <div class="page-header">
     <h1>Groups</h1>
-  </div>      
-
-  <div ng-show="availableOperations.create"> 
-    <a class="btn pull-right" href="#/group-create"><i class="icon-plus"></i> New Group</a>
   </div>
-     
+
+  <div ng-show="availableOperations.create">
+    <a class="btn btn-default pull-right" href="#/group-create"><i class="glyphicon glyphicon-plus"></i> New Group</a>
+  </div>
+
   <table class="table table-condensed">
     <thead>
       <tr>
-        <th><!-- icons --></th>    
+        <th><!-- icons --></th>
         <th>Group Id</th>
         <th>Group Name</th>
-        <th>Group Type</th>  
-        <th><!-- actions --></th>    
+        <th>Group Type</th>
+        <th><!-- actions --></th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="group in groupList">
         <td>
-          <i class="icon-th"></i>
+          <i class="glyphicon glyphicon-th"></i>
         </td>
         <td>
           <a href="#/groups/{{group.id | escape}}">{{group.id}}</a>
-        </td>            
+        </td>
         <td>
           {{group.name}}
         </td>
         <td>
           {{group.type}}
         </td>
-        <td>  
+        <td>
           <a href="#/groups/{{group.id | escape}}">Edit</a>
         </td>
       </tr>
