--- a/client/client/scripts/pages/userEdit.html
+++ b/client/client/scripts/pages/userEdit.html
@@ -2,11 +2,11 @@
   <section id="users">
     <div class="row">
       <div class="page-header">
-        <h1><i class="icon-user-large"></i> {{user.firstName}} {{user.lastName}}</h1>
+        <h1><i class="glyphicon glyphicon-user-large"></i> {{user.firstName}} {{user.lastName}}</h1>
       </div>
     </div>
     <div class="row">
-      <div class="span3">
+      <div class="col-md-3">
         <div class="well sidebar-nav">
           <ul class="nav nav-list">
             <li ng-class="activeClass('profile')">
@@ -22,12 +22,12 @@
         </div>
       </div>
 
-      <div class="span9">
+      <div class="col-md-9">
 
         <div ng-show="show('profile')">
           <div class="box">
             <p ng-if="!profile">
-              <i class="icon-loading"></i> loading profile...
+              <i class="glyphicon glyphicon-loading"></i> loading profile...
             </p>
             <form class="form-horizontal" name="editProfileForm" ng-if="profile">
 
@@ -35,7 +35,7 @@
 
               <div>
 
-                <div class="control-group">
+                <div class="form-group">
                   <label class="control-label" for="inputFirstname">Firstname*</label>
                   <div class="controls">
                     <input id="inputFirstname" name="firstname" type="text" ng-model="profile.firstName" novalidate required ng-disabled="!availableOperations.update"></input>
@@ -43,7 +43,7 @@
                   </div>
                 </div>
 
-                <div class="control-group">
+                <div class="form-group">
                   <label class="control-label" for="inputLastname">Lastname*</label>
                   <div class="controls">
                     <input id="inputLastname" type="text" ng-model="profile.lastName" novalidate required ng-disabled="!availableOperations.update"></input>
@@ -51,7 +51,7 @@
                   </div>
                 </div>
 
-                <div class="control-group">
+                <div class="form-group">
                   <label class="control-label" for="inputEmail">Email</label>
                   <div class="controls">
                     <input id="inputEmail" name="email" type="text" ng-model="profile.email" data-email ng-disabled="!availableOperations.update"></input>
@@ -59,7 +59,7 @@
                   </div>
                 </div>
 
-                <div class="control-group" ng-show="availableOperations.update">
+                <div class="form-group" ng-show="availableOperations.update">
                   <div class="controls">
                     <button type="submit" class="btn"  data-ng-disabled="!canSubmit(editProfileForm, 'profile')" data-ng-click="updateProfile()">Update Profile</button>
                   </div>
@@ -79,7 +79,7 @@
 
               <p>Type a new password to change the existing account password.</p>
 
-              <div class="control-group">
+              <div class="form-group">
                 <label class="control-label" for="inputAuthenticationUserPassword" ng-if="userId === authenticatedUser">Old Password*:</label>
                 <label class="control-label" for="inputAuthenticationUserPassword" ng-if="userId !== authenticatedUser">My Password*:</label>
                 <div class="controls">
@@ -87,23 +87,23 @@
                 </div>
               </div>
 
-              <div class="control-group">
+              <div class="form-group">
                 <label class="control-label" for="inputPassword">New Password*:</label>
                 <div class="controls">
                   <input id="inputPassword" name="inputPassword" type="password" ng-model="credentials.password" data-password required></input>
-                  <p class="text-error" ng-show="updateCredentialsForm.inputPassword.$error.password">Password must have at least 8 characters.</p>
+                  <p class="text-danger" ng-show="updateCredentialsForm.inputPassword.$error.password">Password must have at least 8 characters.</p>
                 </div>
               </div>
 
-              <div class="control-group">
+              <div class="form-group">
                 <label class="control-label" for="inputPasswordRepeat">New Password (repeat)*:</label>
                 <div class="controls">
                   <input id="inputPasswordRepeat" name="inputPasswordRepeat" type="password" ng-model="credentials.password2" data-password-repeat="credentials.password"></input>
-                  <p class="text-error" ng-show="updateCredentialsForm.inputPasswordRepeat.$error.passwordRepeat">Passwords must match.</p>
+                  <p class="text-danger" ng-show="updateCredentialsForm.inputPasswordRepeat.$error.passwordRepeat">Passwords must match.</p>
                 </div>
               </div>
 
-              <div class="control-group">
+              <div class="form-group">
                 <div class="controls">
                   <button type="submit" class="btn" data-ng-click="updateCredentials()" data-ng-disabled="!canSubmit(updateCredentialsForm)">Change Password</button>
                 </div>
@@ -115,7 +115,7 @@
             <form class="form-horizontal">
 
               <legend>Delete User</legend>
-              <div class="alert alert-error">
+              <div class="alert alert-danger">
                 <strong>Warning:</strong> deleting a user account cannot be undone.
               </div>
 
@@ -133,7 +133,7 @@
               <legend>{{user.firstName}} {{user.lastName}}&#39;s Groups</legend>
 
               <div show-if-authorized auth-permission="CREATE" auth-resource-name="group membership">
-                <a class="btn pull-right" data-ng-click="openCreateGroupMembershipDialog()"><i class="icon-plus"></i> Add</a>
+                <a class="btn btn-default pull-right" data-ng-click="openCreateGroupMembershipDialog()"><i class="glyphicon glyphicon-plus"></i> Add</a>
               </div>
 
               <table class="table" ng-hide="groupList.length == 0">
@@ -161,7 +161,7 @@
                       {{group.type}}
                     </td>
                     <td ng-show="availableOperations.removeGroup">
-                      <a class="btn btn-small" data-ng-click="removeGroup(group.id)">Remove</a>
+                      <a class="btn btn-default btn-sm" data-ng-click="removeGroup(group.id)">Remove</a>
                     </td>
                   </tr>
                 </tbody>
