--- a/client/client/scripts/pages/users.html
+++ b/client/client/scripts/pages/users.html
@@ -1,33 +1,33 @@
-<div class="container" ng-cloak>    
+<div class="container" ng-cloak>
   <div class="page-header">
     <h1>Users</h1>
-  </div>      
+  </div>
 
   <div ng-show="availableOperations.create">
-    <a class="btn pull-right" href="#/user-create"><i class="icon-plus"></i> New User</a>
+    <a class="btn btn-default pull-right" href="#/user-create"><i class="glyphicon glyphicon-plus"></i> New User</a>
   </div>
-     
+
   <table class="table table-condensed">
     <thead>
       <tr>
-        <th><!-- pictures --></th>    
+        <th><!-- pictures --></th>
         <th>Name</th>
-        <th>Username</th>  
-        <th><!-- actions --></th>    
+        <th>Username</th>
+        <th><!-- actions --></th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="user in userList">
         <td>
           <!-- add user pictures later -->
-          <i class="icon-user"></i>
-        </td>            
+          <i class="glyphicon glyphicon-user"></i>
+        </td>
         <td>
           <a ng-href="#/users/{{user.id | escape}}">{{user.firstName}} {{user.lastName}}</a>
         </td>
         <td>{{user.id}}</td>
         <td>
-          <a ng-href="#/users/{{user.id | escape}}">Edit</a> 
+          <a ng-href="#/users/{{user.id | escape}}">Edit</a>
         </td>
       </tr>
     </tbody>
