--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -30,15 +30,6 @@
 
     <!-- scripts -->
 
-    <!-- For IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if IE]>
-        <link href="$APP_ROOT/app/cockpit/assets/vendor/better-dom/dist/better-dom-legacy.htc" rel="htc"/>
-        <script src="$APP_ROOT/app/cockpit/assets/vendor/better-dom/dist/better-dom-legacy.js"></script>
-    <![endif]-->
-
     <script type="application/javascript">
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
       window.PLUGIN_PACKAGES = $PLUGIN_PACKAGES || [];
@@ -67,7 +58,102 @@
         </a>
       </div>
 
-      <div ng-include="'$APP_ROOT/app/admin/templates/navigation.html'"></div>
+      <ul ng-cloak
+          cam-if-logged-in
+          class="nav navbar-nav"
+          ng-controller="NavigationController">
+
+        <li class="dropdown"
+            ng-class="activeClass('#/user')">
+          <a sem-show-users
+             href="#/users">Users</a>
+        </li>
+
+        <li class="dropdown"
+            ng-class="activeClass('#/group')">
+          <a sem-show-groups
+             href="#/groups">Groups</a>
+        </li>
+
+        <li class="dropdown"
+            ng-class="activeClass('#/authorization')"
+            show-if-authorized
+            auth-permission="ALL"
+            auth-resource-name="authorization">
+          <a sem-show-authorizations
+             href="#/authorization?resource=0">Authorizations</a>
+        </li>
+        <li class="dropdown"
+            ng-class="activeClass('#/system')">
+          <a sem-show-systems
+             href="#/system?section=system-settings-general">System</a>
+        </li>
+      </ul>
+
+
+
+      <ul class="nav navbar-nav pull-right"
+          ng-controller="AuthenticationController">
+
+        <li engine-select></li>
+
+        <li class="dropdown"
+            cam-if-logged-in
+            ng-cloak>
+          <a href
+             sem-show-user-actions
+             class="dropdown-toggle"
+             data-toggle="dropdown">
+            <i class="glyphicon glyphicon-user "></i>
+            {{ authentication.name }}
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li>
+              <a sem-jump-to-profile
+                 ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
+                My Profile
+              </a>
+            </li>
+
+            <li class="divider"></li>
+
+            <li>
+              <a href sem-log-out
+                 ng-click="logout()">
+                Sign out
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="divider-vertical"
+            cam-if-logged-in
+            ng-cloak></li>
+
+        <li class="app-switch dropdown"
+            cam-app-switch>
+          <a href
+             sem-show-applications
+             class="dropdown-toggle"
+             data-toggle="dropdown">
+            <i class="glyphicon glyphicon-home "></i>
+            <b class="caret"></b>
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li ng-show="!authentication || authentication.canAccess('cockpit')">
+              <a sem-jump-to-cockpit
+                 ng-href="{{ '../../cockpit/:engine/' | uri }}">Cockpit</a>
+            </li>
+
+            <li ng-show="!authentication || authentication.canAccess('tasklist')">
+              <a sem-jump-to-tasklist
+                 ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
     </div>
 
     <!-- content -->
