impr(styles): correct dropdown bootstrap css class
fix(styles): remove dropdown-menu-right on filter add button

Related to: CAM-3270

--- a/client/client/scripts/pages/process-definition.html
+++ b/client/client/scripts/pages/process-definition.html
@@ -47,7 +47,7 @@
               <i class="glyphicon glyphicon-plus"></i>
             </button>
 
-            <ul class="dropdown-menu pull-right">
+            <ul class="dropdown-menu">
               <li>
                 <a href ng-click="addVariableFilter()">
                   by variable
