impr(styles): reorganize the imports and common styles
Related to: CAM-3270

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -163,19 +163,16 @@
         <div notifications-panel class="notifications-panel"></div>
 
         <!-- view body provided by ngView -->
-        <div ng-view>
-        </div>
-
-        <div class="ctn-push-down"></div>
+        <div ng-view></div>
       </div>
-
-      <!-- footer -->
-      <footer>
-        <div>
-          Powered by <a href="http://camunda.org">camunda BPM</a> / <span class="version">v${project.version}</span>
-        </div>
-      </footer>
     </div>
+
+    <!-- footer -->
+    <footer>
+      <div>
+        Powered by <a href="http://camunda.org">camunda BPM</a> / <span class="version">v${project.version}</span>
+      </div>
+    </footer>
 
     <script src="$APP_ROOT/app/admin/assets/vendor/better-dom/dist/better-dom.js"></script>
     <script src="$APP_ROOT/app/admin/assets/vendor/better-placeholder-polyfill/dist/better-placeholder-polyfill.js"></script>
