--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -27,7 +27,7 @@
 
           <legend>{{title}} Authorizations</legend>
 
-             <table class="table table-condensed table-bordered">
+             <table class="table table-condensed table-striped">
                 <thead>
                   <tr>
                     <th>Type</th>
