--- a/client/client/scripts/directives/quick-filter.html
+++ b/client/client/scripts/directives/quick-filter.html
@@ -5,9 +5,10 @@
        ng-if="showNameFilter">
     <label class="input-group">
       <input ng-keyup="search()"
-          ng-model="name"
-          name="name"
-          type="text" />
+             ng-model="name"
+             name="name"
+             type="text"
+             class="form-control" />
       <span class="input-group-addon"
             tooltip="Click here to clear the field value.">
       <i class="glyphicon glyphicon-search"
