--- a/client/client/scripts/pages/dashboard.html
+++ b/client/client/scripts/pages/dashboard.html
@@ -1,9 +1,11 @@
-<!-- # CE - src/main/webapp/app/cockpit/pages/dashboard.html -->
+<!-- # CE - camunda-cockpit-ui/client/scripts/pages/dashboard.html -->
 <div class="ctn-view">
 
-  <div ng-repeat="dashboardProvider in dashboardProviders" class="dashboard-view">
-    <view vars="dashboardVars" provider="dashboardProvider"></view>
+  <div ng-repeat="dashboardProvider in dashboardProviders"
+       class="dashboard-view">
+    <view vars="dashboardVars"
+          provider="dashboardProvider"></view>
   </div>
 
 </div><!-- end .ctn-view -->
-<!-- / CE - src/main/webapp/app/cockpit/pages/dashboard.html -->
+<!-- / CE - camunda-cockpit-ui/client/scripts/pages/dashboard.html -->
