--- a/client/client/scripts/directives/breadcrumbs.html
+++ b/client/client/scripts/directives/breadcrumbs.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-cockpit-ui/client/scripts/directives/breadcrumbs.html -->
 <ul class="breadcrumb">
   <li>
     <a href="#">Home</a>
@@ -24,3 +25,4 @@
     </span>
   </li>
 </ul>
+<!-- / CE - camunda-cockpit-ui/client/scripts/directives/breadcrumbs.html -->
