--- a/client/client/scripts/pages/process-definition.html
+++ b/client/client/scripts/pages/process-definition.html
@@ -1,16 +1,13 @@
-<!-- # CE - src/main/webapp/app/cockpit/pages/process-definition.html -->
+<!-- # CE - camunda-cockpit-ui/client/scripts/pages/process-definition.html -->
 <div class="ctn-fixed-view">
 
   <div class="ctn-header">
     <h1>
-      <!--
-      <i class="glyphicon glyphicon-type glyphicon glyphicon-inbox"
-                  tooltip="Process definition"></i>
-      -->
       <span class="process-name-prefix">
         <span>Process</span>
         <span>definition</span>
       </span>
+
       {{ processDefinition.name || processDefinition.key }}
 
       <span class="badge badge-warning badge-suspended"
@@ -24,21 +21,25 @@
     <div class="view-pills" id="cockpit.processDefinition.view"></div>
   </div>
 
-  <div class="ctn-content-container" ctn-collapsable-parent="sidebar">
+  <div class="ctn-content-container"
+       ctn-collapsable-parent="sidebar">
 
     <!-- tool bar -->
     <div class="ctn-toolbar">
 
       <!-- Toolbar actions are provided by plugins -->
       <span ng-repeat="actionProvider in processDefinitionActions">
-        <view provider="actionProvider" vars="processDefinitionVars" />
+        <view provider="actionProvider"
+              vars="processDefinitionVars" />
       </span>
     </div>
 
     <!-- sidebar -->
-    <div class="ctn-column ctn-sidebar ctn-scroll" ctn-collapsable="left">
+    <div class="ctn-column ctn-sidebar ctn-scroll"
+         ctn-collapsable="left">
 
-      <div class="filters" ng-controller="ProcessDefinitionFilterController">
+      <div class="filters"
+           ng-controller="ProcessDefinitionFilterController">
         <h5>
           Filter
           <div class="btn-group btn-control dropdown">
@@ -49,17 +50,20 @@
 
             <ul class="dropdown-menu">
               <li>
-                <a href ng-click="addVariableFilter()">
+                <a href
+                   ng-click="addVariableFilter()">
                   by variable
                 </a>
               </li>
               <li ng-hide="filterData.businessKey">
-                <a href ng-click="addBusinessKeyFilter()">
+                <a href
+                   ng-click="addBusinessKeyFilter()">
                   by business key
                 </a>
               </li>
               <li ng-hide="filterData.start.length">
-                <a href ng-click="addStartDateFilter()">
+                <a href
+                   ng-click="addStartDateFilter()">
                   by start date
                 </a>
               </li>
@@ -67,7 +71,9 @@
           </div>
         </h5>
 
-        <form name="filterForm" novalidate ng-submit="filterChanged()">
+        <form name="filterForm"
+              novalidate
+              ng-submit="filterChanged()">
           <ul class="list-unstyled">
 
             <li class="version-filter filter">
@@ -119,13 +125,16 @@
                         ng-click="removeBusinessKeyFilter()">
                   <i class="glyphicon glyphicon-remove"></i>
                 </button>
-                <input type="text" required placeholder="Filter Business Key"
+                <input type="text"
+                       required
+                       placeholder="Filter Business Key"
                        name="businessKey"
                        ng-model="filterData.businessKey.value"
                        ng-change="filterChanged()" />
               </div>
 
-              <div class="note note-error note-small" ng-if="filterForm.businessKey.$invalid">
+              <div class="note note-error note-small"
+                   ng-if="filterForm.businessKey.$invalid">
                 Field is required
               </div>
             </li>
@@ -135,7 +144,8 @@
                 Start Date
               </div>
 
-              <div class="search search-date" ng-repeat="date in filterData.start">
+              <div class="search search-date"
+                   ng-repeat="date in filterData.start">
 
                 <select ng-model="date.type"
                         ng-options="item as item for item in dateTypeItems"
@@ -158,7 +168,8 @@
                   </button>
                 </div>
 
-                <div class="note note-error note-small" ng-if="filterForm['startDateFilterValue' + $index].$invalid">
+                <div class="note note-error note-small"
+                     ng-if="filterForm['startDateFilterValue' + $index].$invalid">
                   <div ng-show="filterForm['startDateFilterValue' + $index].$error.required">
                     Field is required.
                   </div>
@@ -170,7 +181,8 @@
 
               </div>
 
-              <div class="note note-error note-small" ng-if="filterForm['startDateFilterType0'].$invalid && filterForm['startDateFilterType1'].$invalid">
+              <div class="note note-error note-small"
+                   ng-if="filterForm['startDateFilterType0'].$invalid && filterForm['startDateFilterType1'].$invalid">
                 <div ng-show="filterForm['startDateFilterType0'].$error.dateTypeEqual && filterForm['startDateFilterType1'].$error.dateTypeEqual">
                   Only the combination <code>after/before</code> is allowed.
                 </div>
@@ -183,12 +195,19 @@
               </button>
             </li>
 
-            <li class="variable-filter filter" ng-if="filterData.variables.length">
+            <li class="variable-filter filter"
+                ng-if="filterData.variables.length">
               <div class="name">
-                Variables <a href ng-click="toggleVariableFilterHelp()" title="Get help on variable filters"><i class="glyphicon glyphicon-question-sign"></i></a>
+                Variables
+                <a href
+                   ng-click="toggleVariableFilterHelp()"
+                   title="Get help on variable filters">
+                    <i class="glyphicon glyphicon-question-sign"></i>
+                </a>
               </div>
 
-              <div class="search" ng-repeat="variable in filterData.variables">
+              <div class="search"
+                   ng-repeat="variable in filterData.variables">
 
                 <button class="btn btn-link btn-xs btn-control remove"
                         ng-click="removeVariableFilter(variable)">
@@ -203,13 +222,15 @@
                        ng-change="filterChanged()"
                        process-variable />
 
-                <div class="note note-error note-small" ng-show="filterForm['variableFilter' + $index].$invalid">
+                <div class="note note-error note-small"
+                     ng-show="filterForm['variableFilter' + $index].$invalid">
                   <div ng-show="filterForm['variableFilter' + $index].$error.required">
                     Field is required.
                   </div>
                   <div ng-show="filterForm['variableFilter' + $index].$error.processVariableFilter && !filterForm['variableFilter' + $index].$error.required">
                     Syntax for variable filters is <code>variableName OPERATOR value</code>.
-                    <a href ng-show="!showVariableFilterHelp" ng-click="toggleVariableFilterHelp()">
+                    <a href
+                       ng-show="!showVariableFilterHelp" ng-click="toggleVariableFilterHelp()">
                       Learn more.
                     </a>
                   </div>
@@ -221,32 +242,41 @@
                 <i class="glyphicon glyphicon-plus"></i>
               </button>
 
-              <div class="note" ng-show="showVariableFilterHelp">
+              <div class="note"
+                   ng-show="showVariableFilterHelp">
                 <div class="name">
                   Variable filter syntax
-                  <a href style="font-weight: normal" ng-click="toggleVariableFilterHelp()">
+                  <a href
+                     ng-click="toggleVariableFilterHelp()">
                     hide
                   </a>
                 </div>
                 <div>
                   Filters on variables must be specified as
                   <code>variableName OPERATOR value</code> where <code>OPERATOR</code> may be any of
-                  <span ng-repeat="op in operators"><span ng-show="$index > 0">, </span><code>{{ op }}</code></span>.
+                  <span ng-repeat="op in operators">
+                    <span ng-show="$index > 0">, </span>
+                    <code>{{ op }}</code>
+                  </span>.
                   All variable filters are applied using the logical <code>AND</code>.
                   Strings must be properly enclosed in <code>""</code>.
                   <br/>
                   <br/>
-                  Samples: <code>customerId = 1212</code>, <code>name like "%Walter"</code>, <code>checked = true</code>
+                  Samples:  <code>customerId = 1212</code>,
+                            <code>name like "%Walter"</code>,
+                            <code>checked = true</code>
                 </div>
               </div>
             </li>
 
-            <li class="activity-filter filter" ng-if="filterData.activities.length">
+            <li class="activity-filter filter"
+                ng-if="filterData.activities.length">
               <div class="name">
                 Activity
               </div>
 
-              <div class="search search-text" ng-repeat="activity in filterData.activities">
+              <div class="search search-text"
+                   ng-repeat="activity in filterData.activities">
                 <button class="btn btn-link btn-xs btn-control remove"
                         ng-click="removeActivityFilter(activity)">
                   <i class="glyphicon glyphicon-remove"></i>
@@ -257,7 +287,8 @@
           </ul>
         </form>
 
-        <div class="footer" ng-show="filterChanged.$loading">
+        <div class="footer"
+             ng-show="filterChanged.$loading">
           <span>
             <i class="glyphicon glyphicon-loading"></i> refreshing...
           </span>
@@ -274,13 +305,15 @@
             <strong>All Versions</strong> {{ instanceStatistics.all.count }}
           </li>
         </ul>
-        <i ng-hide="instanceStatistics.$loaded" class="glyphicon glyphicon-loading"></i>
+        <i ng-hide="instanceStatistics.$loaded"
+           class="glyphicon glyphicon-loading"></i>
       </div>
 
       <a class="hide-collapsable pull-right"></a>
     </div>
 
-    <div class="ctn-column ctn-content" ctn-collapsable-parent="tabs">
+    <div class="ctn-column ctn-content"
+         ctn-collapsable-parent="tabs">
 
       <!-- content top pane -->
       <div class="ctn-row ctn-content-top">
@@ -292,16 +325,19 @@
       </div>
 
       <!-- content bottom pane -->
-      <div class="ctn-row ctn-content-bottom ctn-tabbed" ctn-collapsable="bottom">
+      <div class="ctn-row ctn-content-bottom ctn-tabbed"
+           ctn-collapsable="bottom">
         <div ng-show="processDefinitionTabs.length">
           <ul class="nav nav-tabs">
-            <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processDefinitionTabs">
+            <li ng-class="{ active: selectedTab == tabProvider }"
+                ng-repeat="tabProvider in processDefinitionTabs">
               <a href ng-click="selectTab(tabProvider)">{{ tabProvider.label }}</a>
             </li>
           </ul>
 
           <div class="ctn-tabbed-content ctn-scroll">
-            <view provider="selectedTab" vars="processDefinitionVars" />
+            <view provider="selectedTab"
+                  vars="processDefinitionVars" />
           </div>
         </div>
       </div>
@@ -311,4 +347,4 @@
   </div>
 
 </div><!-- end .ctn-fixed-view -->
-<!-- / CE - src/main/webapp/app/cockpit/pages/process-definition.html -->
+<!-- / CE - camunda-cockpit-ui/client/scripts/pages/process-definition.html -->
