--- a/client/client/scripts/pages/process-instance.html
+++ b/client/client/scripts/pages/process-instance.html
@@ -1,11 +1,7 @@
-<!-- # CE - src/main/webapp/app/cockpit/pages/process-instance.html -->
+<!-- # CE - camunda-cockpit-ui/client/scripts/pages/process-instance.html -->
 <div class="ctn-fixed-view">
   <div class="ctn-header">
     <h1>
-      <!--
-      <i class="glyphicon glyphicon-type glyphicon glyphicon-inbox"
-                  tooltip="Process instance"></i>
-      -->
       <span class="process-name-prefix">
         <span>Process</span>
         <span>instance</span>
@@ -17,7 +13,8 @@
         &lt;{{ processInstance.id }}&gt;
       </span>
 
-      <span ng-show="processInstance.businessKey.length > 0" title="Business key of the process instance">
+      <span ng-show="processInstance.businessKey.length > 0"
+            title="Business key of the process instance">
         &lt;{{ processInstance.businessKey}}&gt;
       </span>
 
@@ -29,25 +26,30 @@
       </span>
     </h1>
 
-    <div class="view-pills" id="cockpit.processInstance.view"></div>
+    <div class="view-pills"
+         id="cockpit.processInstance.view"></div>
   </div>
 
-  <div class="ctn-content-container" ctn-collapsable-parent="sidebar">
+  <div class="ctn-content-container"
+       ctn-collapsable-parent="sidebar">
 
     <!-- toolbar -->
     <div class="ctn-toolbar">
 
       <!-- Toolbar actions are provided by plugins -->
       <span ng-repeat="tabProvider in processInstanceActions">
-        <view provider="tabProvider" vars="processInstanceVars" />
+        <view provider="tabProvider"
+              vars="processInstanceVars" />
       </span>
 
     </div>
 
     <!-- sidebar -->
-    <div class="ctn-column ctn-sidebar ctn-scroll" ctn-collapsable="left">
+    <div class="ctn-column ctn-sidebar ctn-scroll"
+         ctn-collapsable="left">
 
-      <div class="filters" ng-controller="ProcessInstanceFilterController">
+      <div class="filters"
+           ng-controller="ProcessInstanceFilterController">
         <h5>
           Filter
 
@@ -72,10 +74,10 @@
           </button>
 
           <ng-pluralize count="filterData.activityInstanceCount"
-                      when="{ 'null' : 'Nothing',
-                              '0': 'Nothing',
-                              'one': '1 activity instance',
-                              'other': '{{ filterData.activityInstanceCount }} activity instances'}">
+                        when="{ 'null' : 'Nothing',
+                                '0': 'Nothing',
+                                'one': '1 activity instance',
+                                'other': '{{ filterData.activityInstanceCount }} activity instances'}">
           </ng-pluralize>
 
           selected
@@ -93,24 +95,33 @@
       <a class="hide-collapsable pull-right"></a>
     </div>
 
-    <div class="ctn-column ctn-content" ctn-collapsable-parent="tabs">
+    <div class="ctn-column ctn-content"
+         ctn-collapsable-parent="tabs">
 
       <!-- content top pane -->
       <div class="ctn-row ctn-content-top">
-        <div process-diagram="processDiagram" on-element-click="handleBpmnElementSelection(id, $event)" selection="filter" process-data="processData" provider-component="cockpit.processInstance.diagram.overlay"></div>
+        <div process-diagram="processDiagram"
+             on-element-click="handleBpmnElementSelection(id, $event)"
+             selection="filter"
+             process-data="processData"
+             provider-component="cockpit.processInstance.diagram.overlay"></div>
       </div>
 
       <!-- content bottom pane -->
-      <div class="ctn-row ctn-content-bottom ctn-tabbed" ctn-collapsable="bottom">
+      <div class="ctn-row ctn-content-bottom ctn-tabbed"
+           ctn-collapsable="bottom">
         <div ng-show="processInstanceTabs.length">
           <ul class="nav nav-tabs">
-            <li ng-class="{ active: selectedTab == tabProvider }" ng-repeat="tabProvider in processInstanceTabs">
-              <a href ng-click="selectTab(tabProvider)">{{ tabProvider.label }}</a>
+            <li ng-class="{ active: selectedTab == tabProvider }"
+                ng-repeat="tabProvider in processInstanceTabs">
+              <a href
+                 ng-click="selectTab(tabProvider)">{{ tabProvider.label }}</a>
             </li>
           </ul>
 
           <div class="ctn-tabbed-content ctn-scroll">
-            <view provider="selectedTab" vars="processInstanceVars" />
+            <view provider="selectedTab"
+                  vars="processInstanceVars" />
           </div>
         </div>
       </div>
@@ -120,4 +131,4 @@
   </div>
 
 </div><!-- end .ctn-fixed-view -->
-<!-- / CE - src/main/webapp/app/cockpit/pages/process-instance.html -->
+<!-- / CE - camunda-cockpit-ui/client/scripts/pages/process-instance.html -->
