impr(temapltes): add file paths

--- a/client/client/scripts/pages/create-group-membership.html
+++ b/client/client/scripts/pages/create-group-membership.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/create-group-membership.html -->
 <div class="modal-header">
   <h3>Select Groups</h3>
 </div>
@@ -49,3 +50,4 @@
           ng-hide="status === 'SUCCESS' || status === 'FAILED' || status === 'loadingFailed' || availableGroups.length == 0">Add Groups</button>
 
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/create-group-membership.html -->
