--- a/client/client/scripts/pages/groupCreate.html
+++ b/client/client/scripts/pages/groupCreate.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/groupCreate.html -->
 <div class="container">
   <section id="groups">
     <div class="row">
@@ -42,3 +43,4 @@
     </div>
   </section>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/groupCreate.html -->
