--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/groups.html -->
 <div class="container" ng-cloak>
   <div class="page-header">
     <h1>Groups</h1>
@@ -38,3 +39,4 @@
     </tbody>
   </table>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/groups.html -->
