--- a/client/client/scripts/pages/setup.html
+++ b/client/client/scripts/pages/setup.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/setup.html -->
 <div class="container">
   <section id="users" ng-switch on="created">
     <div class="row">
@@ -96,3 +97,4 @@
     </div>
   </section>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/setup.html -->
