--- a/client/client/scripts/pages/system.html
+++ b/client/client/scripts/pages/system.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/system.html -->
 <div class="container" ng-cloak>
   <section id="groups">
     <div class="row">
@@ -32,3 +33,4 @@
     </div>
   </section>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/system.html -->
