--- a/client/client/scripts/pages/systemSettingsGeneral.html
+++ b/client/client/scripts/pages/systemSettingsGeneral.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/systemSettingsGeneral.html -->
 <form>
   <legend>General Settings</legend>
 
@@ -12,3 +13,4 @@
   </div>
 
 </form>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/systemSettingsGeneral.html -->
