--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/userCreate.html -->
 <div class="container">
   <section id="users">
     <div class="row">
@@ -72,3 +73,4 @@
     </div>
   </section>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/userCreate.html -->
