--- a/client/client/scripts/pages/userEdit.html
+++ b/client/client/scripts/pages/userEdit.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/userEdit.html -->
 <div class="container">
   <section id="users">
     <div class="row">
@@ -177,3 +178,4 @@
     </div>
   </section>
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/userEdit.html -->
