--- a/client/client/scripts/pages/users.html
+++ b/client/client/scripts/pages/users.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/users.html -->
 <div class="container" ng-cloak>
   <div class="page-header">
     <h1>Users</h1>
@@ -33,4 +34,4 @@
     </tbody>
   </table>
 </div>
-
+<!-- / CE - camunda-admin-ui/client/scripts/pages/users.html -->
