--- a/client/client/scripts/pages/confirm-delete-authorization.html
+++ b/client/client/scripts/pages/confirm-delete-authorization.html
@@ -1,3 +1,4 @@
+<!-- # CE - camunda-admin-ui/client/scripts/pages/confirm-delete-authorization.html -->
 <div class="modal-header">
   <h3>Confirm Delete</h3>
 </div>
@@ -44,3 +45,4 @@
           ng-hide="status === 'SUCCESS' || status === 'FAILED'">Delete</button>
 
 </div>
+<!-- / CE - camunda-admin-ui/client/scripts/pages/confirm-delete-authorization.html -->
